Fix spacing for the list of <SimpleCard>s

--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,8 @@ body #root .ui.largeCard {
 }
 
 .simplecard {
-  margin-top: 0em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .top {
